<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_title"
        android:dialogTitle="@string/pref_location_dialogTitle"
        android:summary="@string/pref_location_summary"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_defaultValue"
        android:inputType="text"
        android:singleLine="true"/>
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:dialogTitle="@string/pref_units_dialogTitle"
        android:entries="@array/pref_units_label"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_defaultValue" />

</PreferenceScreen>